<!--
  ~ Mr.Mantou - On the importance of taste
  ~ Copyright (C) 2015-2016  XiNGRZ <xxx@oxo.ooo>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/save"
        android:title="@string/save" />

    <item
        android:id="@+id/set_wallpaper"
        android:title="@string/set_wallpaper" />

</menu>
