<!--
  ~ Mr.Mantou - On the importance of taste
  ~ Copyright (C) 2015-2016  XiNGRZ <xxx@oxo.ooo>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AboutActivity">

    <data>

        <import
            alias="BuildConfig"
            type="ooo.oxo.mr.BuildConfig" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/LightToolbarThemeOverlay"
            tools:paddingTop="25dp">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="?colorPrimary"
                app:titleEnabled="false">

                <RelativeLayout
                    android:id="@+id/hero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="?actionBarSize"
                    android:fitsSystemWindows="true"
                    android:theme="@style/LightToolbarThemeOverlay"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/web_hi_res_512" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/icon"
                        android:layout_centerHorizontal="true"
                        android:text="@string/app_name"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name"
                        android:layout_centerHorizontal="true"
                        android:text="@{@string/version(BuildConfig.VERSION_NAME, BuildConfig.BUILD_TYPE)}"
                        android:textSize="12sp"
                        tools:text="@string/version" />

                </RelativeLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="?homeAsUpIndicator"
                    app:title="@string/about" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <WebView
                android:id="@+id/chrome"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>
